processed/gerrit/txt_full/55413.txt
Change:     55413
Subject:    LU-17945 lnet: fix nla_extract_val() -Werror=missing-prototypes
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/55413
Change-Id:  Ieb11d25ea8fcd19b715e2decf958cfd9d920bcc8
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2024-06-12 21:49:16.000000000
Updated:    2024-06-25 03:32:50.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   1 (0 unresolved)
Topic:      ubuntu2404

--- Labels ---
  Code-Review: James Simmons: +1; Serguei Smirnov: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, James Simmons, Jian Yu, Serguei Smirnov

--- Commit Message ---
LU-17945 lnet: fix nla_extract_val() -Werror=missing-prototypes

This patch explicitly defines nla_extract_val() as a static function
to fix the following build failure:

lnet/lnet/api-ni.c:2888:1: error:
no previous prototype for 'nla_extract_val' [-Werror=missing-prototypes]
 2888 | nla_extract_val(struct nlattr **attr, int *rem,
      | ^~~~~~~~~~~~~~~

Test-Parameters: trivial testlist=sanity-lnet

Change-Id: Ieb11d25ea8fcd19b715e2decf958cfd9d920bcc8
Fixes: 629d80d ("LU-10003 lnet: migrate fail nid to Netlink")
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55413
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-06-12 21:49:16.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2024-06-12 21:51:47.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2024-06-12 21:53:48.000000000) ---
Patch Set 1:

(1 comment)

Builds for x86_64 centos7,rhel8.5 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/43364/results.html

 Commencing initial testing: runtests-ssk@ldiskfs+SharedKey runtests@zfs runtests@zfs+DNE sanity-lnet@ldiskfs+DNE sanity-lnet@zfs

--- Message (Lustre Gerrit Janitor, 2024-06-12 22:06:17.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests-ssk@ldiskfs+SharedKey runtests@zfs runtests@zfs+DNE sanity-lnet@ldiskfs+DNE sanity-lnet@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/43364/results.html
Commencing standard testing: 
- conf-sanity1@zfs conf-sanity1@zfs+DNE conf-sanity2@zfs conf-sanity2@zfs+DNE conf-sanity3@zfs conf-sanity3@zfs+DNE conf-sanity-slow@zfs conf-sanity-slow@zfs+DNE conf-sanity-slow-106@zfs conf-sanity-slow-106@zfs+DNE insanity@zfs insanity@zfs+DNE lnet-selftest@zfs lustre-rsync-test@zfs lustre-rsync-test@zfs+DNE ost-pools@zfs ost-pools@zfs+DNE pjdfstest@zfs pjdfstest@zfs+DNE racer@zfs racer@zfs+DNE recovery-small@zfs recovery-small@zfs+DNE replay-dual@zfs replay-dual@zfs+DNE replay-ost-single@zfs replay-ost-single@zfs+DNE replay-single@zfs replay-single@zfs+DNE replay-vbr@zfs replay-vbr@zfs+DNE sanity1@zfs sanity1@zfs+DNE sanity2@zfs sanity2@zfs+DNE sanity-slow@zfs sanity-slow@zfs+DNE sanity-benchmark@zfs sanity-benchmark@zfs+DNE sanity-dom@zfs sanity-dom@zfs+DNE sanity-flr@zfs sanity-flr@zfs+DNE sanity-hsm@zfs sanity-hsm@zfs+DNE sanity-lfsck@zfs sanity-lfsck@zfs+DNE sanity-pcc@zfs sanity-pcc@zfs+DNE sanity-pfl@zfs sanity-pfl@zfs+DNE sanity-quota@zfs sanity-quota@zfs+DNE sanity-scrub@zfs sanity-scrub@zfs+DNE sanity-sec@zfs sanity-sec@zfs+DNE sanityn@zfs sanityn@zfs+DNE

--- Message (jenkins, 2024-06-12 22:24:27.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/105433/ : SUCCESS

--- Message (Maloo, 2024-06-12 22:24:57.000000000) ---
Patch Set 1:

The following sessions will be run for build 105433 patch 1

Enforced:
- review-ldiskfs-dne on el9.3-x86_64/ldiskfs servers and clients
- custom on el9.3-x86_64/ldiskfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=105433&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=105433#redirect

--- Message (James Simmons, 2024-06-12 22:32:35.000000000) ---
Patch Set 1: Code-Review+1

Ouch, newer gcc :-/

--- Message (Serguei Smirnov, 2024-06-12 22:41:16.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Lustre Gerrit Janitor, 2024-06-13 00:59:08.000000000) ---
Patch Set 1:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed Successfully

Succeeded:
- conf-sanity1@zfs conf-sanity1@zfs+DNE conf-sanity2@zfs conf-sanity2@zfs+DNE conf-sanity3@zfs conf-sanity3@zfs+DNE conf-sanity-slow@zfs conf-sanity-slow@zfs+DNE conf-sanity-slow-106@zfs conf-sanity-slow-106@zfs+DNE insanity@zfs insanity@zfs+DNE lnet-selftest@zfs lustre-rsync-test@zfs lustre-rsync-test@zfs+DNE ost-pools@zfs ost-pools@zfs+DNE pjdfstest@zfs pjdfstest@zfs+DNE racer@zfs racer@zfs+DNE recovery-small@zfs recovery-small@zfs+DNE replay-dual@zfs replay-dual@zfs+DNE replay-ost-single@zfs replay-ost-single@zfs+DNE replay-single@zfs replay-single@zfs+DNE replay-vbr@zfs replay-vbr@zfs+DNE sanity1@zfs sanity1@zfs+DNE sanity2@zfs sanity2@zfs+DNE sanity-slow@zfs sanity-slow@zfs+DNE sanity-benchmark@zfs sanity-benchmark@zfs+DNE sanity-dom@zfs sanity-dom@zfs+DNE sanity-flr@zfs sanity-flr@zfs+DNE sanity-hsm@zfs sanity-hsm@zfs+DNE sanity-lfsck@zfs sanity-lfsck@zfs+DNE sanity-pcc@zfs sanity-pcc@zfs+DNE sanity-pfl@zfs sanity-pfl@zfs+DNE sanity-quota@zfs sanity-quota@zfs+DNE sanity-scrub@zfs sanity-scrub@zfs+DNE sanity-sec@zfs sanity-sec@zfs+DNE sanityn@zfs sanityn@zfs+DNE 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/43364/results.html

--- Message (Maloo, 2024-06-13 05:50:37.000000000) ---
Patch Set 1: Verified-1

Failed enforced test review-ldiskfs-dne on RHEL 9.3/x86_64 uploaded by Onyx Autotest from onyx-58vm4: https://testing.whamcloud.com/test_sessions/9fadf9b7-998e-42b6-bc9c-a31042812ec0 ran 5 tests.  1 tests failed: sanity.

--- Message (Autotest, 2024-06-13 06:16:15.000000000) ---
Patch Set 1:

Trevis Autotest retesting enforced review-ldiskfs-dne session on el9.3-x86_64/ldiskfs servers and clients for build 105433 patch 1. Requested by jianyu because of LU-16877.

--- Message (Maloo, 2024-06-13 10:48:34.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-ldiskfs-dne on RHEL 9.3/x86_64 uploaded by Trevis Autotest from trevis-106vm1: https://testing.whamcloud.com/test_sessions/9209d98c-bc78-4262-9966-0222a5dd24af ran 5 tests.

--- Message (Jian Yu, 2024-06-13 18:21:12.000000000) ---
Topic set to ubuntu2404

--- Message (Oleg Drokin, 2024-06-25 03:32:47.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2024-06-25 03:32:50.000000000) ---
Change has been successfully cherry-picked as 3e8d005bc94d82dfc8010df5350fbf4938a4e547 by Oleg Drokin
